Implemented new options and settings